--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -14,7 +14,7 @@
         }
         else
         {
-            NavManager.NavigateTo("/");    // Or To home page
+            NavManager.NavigateTo("/customers");    // Or To home page
         }
     }
 }
